--- a/src/app/geral/cidade/cidade.component.html
+++ b/src/app/geral/cidade/cidade.component.html
@@ -73,6 +73,7 @@
                            [pageSize]="tamanho"
                            [pageSizeOptions]="pageSizeOptions"
                            (page)="paginar($event)"
+                           showFirstLastButtons
                            >
             </mat-paginator>
         </div>
